# embag

./: CMakeLists.txt  README.md
lib/: embag.cc  embag.h  util.h
src/: ArgumentsParser.hpp  CMakeLists.txt  align_pointcloud.cpp  align_pointcloud_gimbal.cpp  circular_buffer.hpp  data_types.hpp  main.cpp  main2.cpp  mavlink_data.hpp  pointcloudaligner.cpp  pointcloudaligner.hpp  ros_processer.cpp  ros_processer.hpp  sensor.hpp  sensor_data_interface.hpp  test_pointcloudaligner.cpp  wrapper.hpp
